# drf-boilerplate

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  commands.md  docker-compose.yml  manage.py  pyproject.toml
config/: urls.py
config/settings/: base.py  development.py  production.py
tests/: factories.py
tests/users/: test_models.py
